<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="lblTitulo">Curso - Casos Prácticos</string>
    <string name="app_name">Curso - Casos Practicos</string>
    <string name="lblInfo">Seleccione el tema del caso práctico que desea ver</string>
    <string name="btnGo">Ir al tema </string>
    <string-array name="casos_array">
        <item>Tema 1 y 2</item>
        <item>Tema 4</item>
        <item>Tema 5</item>
        <item>Tema 6</item>
        <item>Tema 7</item>
        <item>Tema 8</item>
    </string-array>    
    <string name="caso1hello">Caso práctico -Tema 1 y 2</string>
    
    <string name="caso2info">Pise y arrastre en la pantalla</string>
    <string name="caso2hello">Caso práctico -Tema 4</string>
    <string name="caso2dst">Distancia Recorrida: </string>
    
    <string name="caso3hello">Caso práctico -Tema 5</string>
    <string name="caso3titulo">Ingreso de Usuario</string>
    <string name="caso3lblNombre">Nombre:</string>
    <string name="caso3hintNombre">Ingrese su nombre</string>
    <string name="caso3lblApellido">Apellido:</string>
    <string name="caso3hintApellido">Ingrese su apellido</string>
    <string name="caso3lblCelular">Celular:</string>
    <string name="caso3hintCelular">Ingrese su celular</string>
    <string name="caso3btnCancelar">Cancelar</string>
    <string name="caso3btnAceptar">Aceptar</string>
    
    
    <string name="caso4titulo">Caso Práctico - Controles Básicos</string>
    <string name="caso4seleccione">Seleccione el idioma: </string>
    <string name="caso4seleccionado">Idioma seleccionado: </string>
    <string name="caso4idioma_en">Ingles</string>
    <string name="caso4idioma_es">Español</string>
    <string name="caso4idioma_po">Portugués</string>
    <string name="caso4idioma_ge">Aleman</string>
    <string name="caso4idioma_it">Italiano</string>
    
    <string-array name="caso5opc1">
        <item>Primario</item>
        <item>Secundario</item>
        <item>Terceario</item>
        <item>Otros</item>
    </string-array> 
    <string-array name="caso5opc2">
        <item>Televisor</item>
        <item>Teléfono Móvil</item>
        <item>Computadora</item>
        <item>Tablet PC</item>
    </string-array>         
    <string name="caso5spinner">El Spinner esta en la actividad que selecciona los temas</string>
    <string name="caso5selectList">Seleccione un elemento de la lista</string>
    <string name="caso5selectGrid">Seleccione un elemento de la grid</string>
    <string name="caso5ultimo_seleccionado">Último Seleccionado: </string>
    
    
    <string name="caso6nombre">Nombre: </string>
    <string name="caso6apellido1">Apellido 1: </string>
    <string name="caso6apellido2">Apellido 2: </string>
    <string name="caso6mostrar">Mostrar</string>
    <string name="caso6borrar">Borrar</string>
    <string name="caso6todo">Haga click en Mostrar...</string>
    
    
    
</resources>