<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caso6nombre" />

    <EditText
        android:id="@+id/caso6txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caso6apellido1" />

    <EditText
        android:id="@+id/caso6txtApellido1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caso6apellido2" />

    <EditText
        android:id="@+id/caso6txtApellido2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/caso6btnMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caso6mostrar" />

        <Button
            android:id="@+id/caso6btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caso6borrar" />

    </LinearLayout>

    <TextView
        android:id="@+id/caso6lblTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caso6todo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>